// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSlider Snapshots shows disabled 1`] = `
<label
  className="sc-bdVaJa equNwL"
>
  <input
    checked={false}
    className="sc-bwzfXH eKeXgs"
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={false}
    className="sc-htpNat jiIFKi"
    disabled={true}
  />
</label>
`;

exports[`ToggleSlider Snapshots shows toggled off 1`] = `
<label
  className="sc-bdVaJa equNwL"
>
  <input
    checked={false}
    className="sc-bwzfXH eKeXgs"
    disabled={false}
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={false}
    className="sc-htpNat dwgooG"
    disabled={false}
  />
</label>
`;

exports[`ToggleSlider Snapshots shows toggled on 1`] = `
<label
  className="sc-bdVaJa equNwL"
>
  <input
    checked={true}
    className="sc-bwzfXH eKeXgs"
    disabled={false}
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={true}
    className="sc-htpNat dFyors"
    disabled={false}
  />
</label>
`;
